# productive_python

./: .bandit  .pre-commit-config.yaml  .style.yapf  README.md  pyproject.toml
.styleconfigs/: .isort.cfg  .pylintrc  pyproject.toml
fluent_python/: frenchdeck.py
fluent_python/python_methods/: pizza.py  pizza_abstract.py  pizza_class.py  pizza_mixing.py  pizza_static.py
fluent_python/strategy_pattern/: strategy.py  strategy_best.py
rock_paper_scissors/: __init__.py  play_game.py  rock_paper_scissors.py  rps_game.py
tests/: test_frenchdeck.py  test_pizza.py  test_rps_game.py  test_strategy.py  test_webpage.py
webpage_metrics/: __init__.py  webpage.py  webpage_metrics.py
