[tool.poetry]
name = "productive-python"
version = "0.1.0"
description = ""
authors = ["viktor <vktr.buyukli@gmail.com>"]
readme = "README.md"
packages = [{include = "productive_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
tabulate = "^0.9.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
